--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>Redux App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="jumbotron"></div>
+      <h1 id="counter">0</h1>
+      <button id="dec"
   </body>
 </html>
